--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 </head>
 <body>
 
-    
+    <button id="num">
+        count <span id="numCount">0</span>
+    </button>
 
     <script src="script.js"></script>
 </body>
